--- a/src/index.v.html
+++ b/src/index.v.html
@@ -15,78 +15,135 @@
     </div>
 </div>
 
-<div class="wrap">
-    <div class="row center-xs">
-        <div class="col-xs-12">
-            <h2>Our Mission</h2>
-        </div>
-        <div class="col-xs-12">
-            <p>
-                The mission of Flatirons Recovery Center is to provide client-centered, evidence-based
-                substance use/dual-diagnosis care that takes a holistic approach to treatment. What
-                differentiates Flatirons Recovery Center from other treatment providers is our commitment to
-                small group sizes, treating clients as whole beings, and the continued development of a
-                compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical
-                staff provide outstanding care that meets clients as they are, in order to guide them through
-                the process of healing from a wide range of substance use, and mental health disorders.
-            </p>
-
-        </div>
-        <div class="col-xs-12">
-            <p>
-                Flatirons Recovery Center provides clients the opportunity to begin their healing process from
-                substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. We provide a sober
-                living residence for clients to live in a supportive, structured, healthy environment while taking
-                part in our Day Treatment, and Intensive Outpatient (IOP) programs. Over the course of their
-                time with Flatirons Recovery Center, clients can expect to be introduced to new many new skills
-                to develop their personal foundation for recovery, including: Mindfulness Skills, Pro-Recovery
-                Diet, biofeedback, EMDR trauma therapy, Dialectical Behavioral Therapy, Relapse Prevention
-                Skills, and introduction to community based recovery programs such as SMART Recovery and
-                12 Step/AA.
-            </p>
+<div class="row">
+    <div class="col-xs">
+        <div class="wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>About Flatirons Recovery</h2>
+                    <hr>
+                </div>
+                <div class="col-xs-12">
+                    <h3>Our Mission</h3>
+                    <p>The mission of Flatirons Recovery Center is to provide client-centered, evidence-based substance use/dual-diagnosis care that takes a holistic approach to treatment.</p>
+                    <h3>Why Us?</h3>
+                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our commitment to small group sizes, treating clients as whole beings, and the continued development of a compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                </div>
+            </div>
+            <div class="row center-xs">
+                <a class="button border" href="/about">Learn More</a>
+            </div>
         </div>
     </div>
+    <div class="col-xs half-bg"></div>
 </div>
 
 <div class="blue">
     <div class="wrap">
         <div class="row center-xs">
-            <h2>Example</h2>
+            <h2>Get In Touch</h2>
         </div>
         <div class="row center-xs">
             <div class="col-xs">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <h3>If you would like to reach out Flatirons Recovery Center<br />
+                    call us at 555-555-5555</h3>
 
-                <a class="button border" href="#">Learn More</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="green">
-    <div class="wrap">
-        <div class="row center-xs">
-            <h2>Example</h2>
-        </div>
-        <div class="row center-xs">
-            <div class="col-xs">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-                <a class="button border" href="#">Learn More</a>
+                <a class="button border" href="/contact">Contact Us</a>
             </div>
         </div>
     </div>
 </div>
 
 <div class="wrap">
-    <div class="row center-xs">
-        <h2>Example</h2>
-    </div>
-    <div class="row center-xs">
+    <div class="row">
         <div class="col-xs">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-            <a class="button border" href="#">Learn More</a>
+            <h2>Mental Health</h2>
+            <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder. These are also referred to as co-occurring disorders.</p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs">
+            <h3>ANXIETY DISORDER</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+
+        <div class="col-xs">
+            <h3>BI-POLAR DISORDER</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+
+        <div class="col-xs">
+            <h3>POST-TRAUMATIC STRESS DISORDER</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+    </div>
+    <div class="row center-xs">
+        <a class="button border" href="/mental-health">Mental Health</a>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs">
+        <div class="wrap">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h2>Treatment</h2>
+                    <hr>
+                </div>
+                <div class="col-xs-12">
+                    <h3>Our Mission</h3>
+                    <p>The mission of Flatirons Recovery Center is to provide client-centered, evidence-based substance use/dual-diagnosis care that takes a holistic approach to treatment.</p>
+                    <h3>Why Us?</h3>
+                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our commitment to small group sizes, treating clients as whole beings, and the continued development of a compassionate community in which to heal. Our highly skilled, kind, and compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                </div>
+            </div>
+            <div class="row center-xs">
+                <a class="button border" href="/about">Learn More</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs half-bg"></div>
+</div>
+
+<div class="wrap">
+    <form class="row">
+        <div class="col-xs-12">
+            <h3>send us a message</h3>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+            <label>first name</label>
+            <input type="text" name="firstName" required>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+            <label>last name</label>
+            <input type="text" name="lastName" required>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <label>email</label>
+            <input type="text" name="email">
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <label>phone</label>
+            <input type="text" name="phone" required>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <label>how'd you hear about us</label>
+            <select name="referral">
+                <option value="none">none</option>
+                <option value="social media">social media</option>
+                <option value="doctor/therapist">doctor/therapist</option>
+                <option value="hospital system">hospital system</option>
+                <option value="search engine">search engine</option>
+                <option value="advertisement">advertisement</option>
+                <option value="other">other</option>
+            </select>
+        </div>
+        <div class="col-xs-12">
+            <label>message</label>
+            <textarea name="message" required></textarea>
+        </div>
+        <div class="col-xs-12">
+            <button class="button orange" type="submit">Submit</button>
+        </div>
+    </form>
 </div>
